Contact:            http://Go4.gsi.de
---------------------------------------------------------------
This software can be used under the license agreements as stated
in Go4License.txt file which is part of the distribution.
---------------------------------------------------------------

Changes in Go4 v4.5.5
1. Adjust different macros to use together with ROOT 5.99 


Changes in Go4 v4.5.3 (devel Summer 2012)/ v4.5.4 (Release November 2012)
1. Added macro fft.C for fast fourier transform of histograms into gui command line.
2. Adjustments for new root versions >5.99 (wrapper go4iostream.h)
3. Added some keyboard shortcuts for histogram display manipulation:
    Ctrl-Left/Ctrl-Right: Expand/Unexpand range on x axis 
	Left/Right:  Move Histogram left/right on x axis (only if range was expanded)
	Up/Down: Expand/Unexpand range on y axis (toggles autoscale off)	
	Shift-Up/Shift-Down: Move Histogram up/down on y axis (only if range was expanded)
	Ctrl-End/Ctrl-Home: Expand/Unexpand range on z axis (toggles autoscale off)	
	Shift-Home/Shift-End: Move Histogram up/down on z axis (only if range was expanded)
    Ctrl-Minus: Unzoom ranges totally
    Ctrl-Plus: Show/hide range settings window
    Ctrl-Page Up: Y axis in logarithmic scale
    Ctrl-Page Down: Y axis in linear scale    
    F5: Refresh display of all remote Histograms
    Shift-C: Clear all remote Histograms _remotely_
    Shift-M: Start monitoring timer 
    Shift-N: Stop  monitoring timer
    Note: All these shortcuts do work only if the corresponding toolboxes 
    (zoom tools, browser options, short histogram draw options) are active!
4. Added shortcut F1 to display the Go4 Introduction Manual as Help. 
5. Added shortcuts F6,F7,F8 to toggle visibility of 
    browser, logger, and mbs monitor dock windows (F9 for DABC monitor if compiled with DIM)    
6. GUI analysis status ratemeter: Tooltip of runtime seconds  this time
   as hour:minute:seconds representation. 