@@ -197,6 +197,7 @@
      <file>../../icons/x_pic.png</file>
      <file>../../icons/y_pic.png</file>
      <file>../../icons/zoomicon.png</file>
+     <file>../../icons/zoomauto.png</file>
      <file>../../icons/zoomlim.png</file>
      <file>../../icons/zoomoff.png</file>
      <file>../../icons/zoom.png</file>
